[package]
name = "overlap-chunk"
version = "0.0.3"
edition = "2024"
authors = ["Katsuhiro Honda<freewave3@gmail.com>"]
description = "A Rust library for splitting text into chunks of specified size with adjustable overlap percentage."
license = "MIT"
repository = "https://github.com/katsuhirohonda/overlap-chunk"
keywords = ["text", "chunking", "overlap"]
categories = ["text-processing"]

[dependencies]
overlap-chunk = "0.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"